--- a/sickle-cell/reports/lit_review.qmd
+++ b/sickle-cell/reports/lit_review.qmd
@@ -23,30 +23,30 @@ Annual economic cost was USD 138 in 2010 with a range of USD 94 to USD 229.
 
 # Epidemiology
 
-Most likely to die before 5.
-So consider interventions 1-5 and beyond 5 years
+Most likely to die before 5. So consider interventions 1-5 and beyond 5 years
 
 ## Distribution
 
 ## Effects
 
 # Prevention
-- Premarital testing
-- Genetic counselling clinics
 
+-   Premarital testing
+-   Genetic counselling clinics
 
 # Diagnosis
 
--  Screening: neonatal/ infant (universal?)
-+ Rapid tests:
-++ Sickle SCAN
-++ HemoTypeSC
+-   Screening: neonatal/ infant (universal?)
+
+-   Rapid tests: ++ Sickle SCAN ++ HemoTypeSC
 
 -   Confirmatory testing (laboratory tests)
-+ Haemoglobin electrophoresis
-+ Isoelectric focusing
-+ High-perormance liquid chromatography
 
+-   Haemoglobin electrophoresis
+
+-   Isoelectric focusing
+
+-   High-perormance liquid chromatography
 
 # Management
 
@@ -65,6 +65,5 @@ So consider interventions 1-5 and beyond 5 years
 -   Hydroxycarbamide (from 9 months)
 
 # Conclusion
-
 
 # References
